# llm-guard-proxy

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  run-local.sh  stop-local.sh
ai-guard-proxy-handoff/: CLASSIFIER_PLUGIN_SPEC.md  CODEX_PROMPT.md  POLICY_SCHEMA.md  PRODUCT_BRIEF.md  README.md  ROADMAP.md  SECURITY_CONSIDERATIONS.md  TECHNICAL_SPEC.md  TEST_PLAN.md
ai-guard-proxy-handoff/example-policies/: coding_agent.yaml  enterprise.yaml  school.yaml
app/: __init__.py  config.py  main.py  models.py
app/classifiers/: __init__.py  base.py  llama_guard.py  prompt_injection.py  regex.py  registry.py  safety_llm_stub.py  secrets.py  terms.py  url_obfuscation.py
app/clients/: __init__.py  ollama.py  ollama_guard.py  upstream.py
app/guards/: __init__.py  input_guard.py  output_guard.py  pipeline.py
app/logging/: __init__.py  audit.py
app/policy/: __init__.py  engine.py  loader.py  schema.py
app/routes/: chat_completions.py
policies/: permissive.yaml
tests/: test_chat_completions.py  test_config.py  test_llama_guard_classifier.py  test_ollama_guard_client.py  test_policy_engine.py  test_policy_loader.py  test_prompt_injection_classifier.py  test_terms_classifier.py
